--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Wordpress интенсив
             </div>
         </div>
-        <h1 class="title">Создать свой сайт на WordPress</h1>
+        <h1 class="title">Создать свой сайт на WordPress!</h1>
         <div class="simple">
             <h2 class="title_big">Это просто!</h2>
             <div class="line"></div>
