--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
             <img src="icons/logo.png" alt="" class="logo_img">
             <div class="logo_text">
-                Wordpress интенсив!!!
+                Wordpress интенсив
             </div>
         </div>
         <h1 class="title">Создать свой сайт на WordPress!!!</h1>
